so-card alignment fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,6 @@ body {
   background-color: white;
   padding-left: 2% !important;
   padding-right: 2% !important;
-
 }
 
 .footer {
@@ -175,6 +174,7 @@ body {
   }
 }
 @media (max-width: 768px) {
+
   /* for med and smaller devices */
   .f_image_cont {
     text-align: center;
@@ -182,6 +182,12 @@ body {
   .front_thing .front_desc,
   .front_thing .front_text {
     text-align: center;
+  }
+  .blog{
+
+    padding-left: 0 !important;
+    
+    padding-right: 0 !important;
   }
 }
 
